--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
